<resources>
    <string name="app_name">RillChat</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Your Password</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="have_account">Have Account?</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>
    <string name="onLine">Online</string>
    <string name="ai_assistant">AI Assistant</string>
</resources>